# RealTimerRayTracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Docs/: BxDF.md  Microfacet.md
RayTracer/: BVH.cpp  Bounds.h  Camera.cpp  Camera.h  Intersection.h  Quad.h  Ray.h  RealTimeRT.h  Renderer.cpp  Scene.cpp  Scene.h  WalnutApp.cpp
RayTracer/Accelerator/: BVH.h  Bounds.cpp  Bounds.h
RayTracer/BxDF/: BxDF.h  DiffuseBxDF.h  GlossyBxDF.h  SampleUtils.h  SpecularBxDF.h
RayTracer/Core/: Camera.cpp  Camera.h  Intersection.h  Ray.h  RealTimeRT.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
RayTracer/Materials/: AllMaterials.h  Diffuse.h  DiffuseEmissive.h  Glossy.h  Material.h  Specular.h
RayTracer/Samples/: CreateScene.cpp  CreateScene.h  testMicrofacetSampling.cpp
RayTracer/Shapes/: AllShapes.h  Primitive.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h  TriangleMesh.cpp  TriangleMesh.h
Walnut/: CMakeLists.txt
Walnut/Walnut/src/Walnut/: EntryPoint.h
Walnut/WalnutApp/src/: WalnutApp.cpp
